Вынос статикв в утилиты